# 50xx-the-mod

./: .gitignore  README.md  battle_object.prc  bgm_50xm_menu_1.nus3audio  bgm_ace_question_allegro.nus3audio  bgm_bbtag_chara.nus3audio  bgm_cars_life_highway.nus3audio  bgm_chillin_respect_elders.nus3audio  bgm_diss_ff_messenger.nus3audio  bgm_fighterz_gogeta_ssgss.nus3audio  bgm_jetpack_main.nus3audio  bgm_kirby_air_mach_pass.nus3audio  bgm_kof_2002_decision_fate.nus3audio  bgm_mvc2_chara_select.nus3audio  bgm_mvc2_training.nus3audio  bgm_mvc3_chara.nus3audio  bgm_mvc3_dr_doom.nus3audio  common.prc  fighter_param.prc  fighter_param_motion.prc
Skyline/50XX/: Cargo.toml
Skyline/50XX/.github/workflows/: rust_build.yml
Skyline/50XX/src/: lib.rs
Skyline/50XX/src/banjo/: mod.rs
Skyline/50XX/src/bayo/: mod.rs
Skyline/50XX/src/bjr/: mod.rs
Skyline/50XX/src/byleth/: mod.rs
Skyline/50XX/src/captain/: mod.rs
Skyline/50XX/src/chrom/: mod.rs
Skyline/50XX/src/cloud/: mod.rs
Skyline/50XX/src/corrin/: mod.rs
Skyline/50XX/src/custom/: mod.rs
Skyline/50XX/src/diddy/: mod.rs
Skyline/50XX/src/dk/: mod.rs
Skyline/50XX/src/falco/: mod.rs
Skyline/50XX/src/fox/: mod.rs
Skyline/50XX/src/ganon/: mod.rs
Skyline/50XX/src/greninja/: mod.rs
Skyline/50XX/src/ike/: mod.rs
Skyline/50XX/src/incin/: mod.rs
Skyline/50XX/src/inkling/: mod.rs
Skyline/50XX/src/isabelle/: mod.rs
Skyline/50XX/src/ivysaur/: mod.rs
Skyline/50XX/src/joker/: mod.rs
Skyline/50XX/src/ken/: mod.rs
Skyline/50XX/src/krool/: mod.rs
Skyline/50XX/src/lucario/: mod.rs
mario/: vl.prc
(+702 files in other folders)
