[package]
name = "mod_50xx"
version = "0.1.0"
authors = ["Haxor <connort26@outlook.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash", features = ["weak_l2cvalue"] }
smashline = { git = "https://github.com/blu-dev/smashline" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true